Resolved Galaxy S5 scaling issues with content overlap

--- a/styles/fourth.css
+++ b/styles/fourth.css
@@ -47,3 +47,13 @@
     width: 25vw;
   }
 }
+
+@media only screen and (max-device-height: 520px) {
+  #fourth .content {
+    margin-top: 10vh;
+  }
+
+  #cloud-11 {
+    top: 60vh;
+  }
+}
